// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Button Component correctly 1`] = `
<button
  className="sc-bdVaJa dmpbVC"
  color={undefined}
  onClick={[Function]}
  scale={undefined}
  type={undefined}
>
  TEST
</button>
`;

exports[`renders the Button Component correctly 2`] = `
<button
  className="sc-bdVaJa htqawi"
  color="error"
  onClick={[Function]}
  scale="l"
  type={undefined}
>
  TEST
</button>
`;

exports[`renders the Button Component correctly 3`] = `
<button
  className="sc-bdVaJa eBrhIU"
  color="error"
  onClick={[Function]}
  scale="l"
  type="flat"
>
  TEST
</button>
`;

exports[`renders the Button Component correctly 4`] = `
<button
  className="sc-bdVaJa jaZcPp"
  color="error"
  onClick={[Function]}
  scale="l"
  type="border"
>
  TEST
</button>
`;

exports[`renders the Button Component correctly 5`] = `
<button
  className="sc-bdVaJa ixuoJO"
  color="error"
  onClick={[Function]}
  scale="l"
  type="raised"
>
  TEST
</button>
`;

exports[`renders the Button Component correctly 6`] = `
<button
  className="sc-bdVaJa eKEqle"
  color={undefined}
  onClick={[Function]}
  scale={undefined}
  type="flat"
>
  TEST
</button>
`;

exports[`renders the Button Component correctly 7`] = `
<button
  className="sc-bdVaJa kYWjyx"
  color={undefined}
  onClick={[Function]}
  scale={undefined}
  type="border"
>
  TEST
</button>
`;

exports[`renders the Button Component correctly 8`] = `
<button
  className="sc-bdVaJa hUcwjg"
  color={undefined}
  onClick={[Function]}
  scale={undefined}
  type="raised"
>
  TEST
</button>
`;
